...
        }

    AutoWidthButtonLayout(
        modifier =
            modifier
                .then(interactionModifier)
                .testTag("AwesomeButton"),
        resolvedWidthPx =
            if (sizeTextOwner.hasExplicitResolvedWidth) {
                sizeTextOwner.resolvedWidthPx.value
            } else {
                null
            },
...
